Fix issue on Iphones

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,8 @@
 
 body{
 	background-color: #FFFFFFFF;
+	height: 100vh;
+	width: 100vw;
 }
 
 p{
